--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   meta: ^1.10.0
   modal_progress_hud_nsn: ^0.5.1
   path_provider: ^2.1.3
+  pdf: ^3.11.0
   shared_preferences: ^2.2.2
   sign_in_with_apple: ^7.0.1
   skeletonizer: ^2.1.0+1
@@ -78,6 +79,10 @@ dependencies:
   device_info_plus: ^12.1.0
   share_plus: ^12.0.0
   open_filex: ^4.7.0
+  printing: ^5.13.4
+  crypto: ^3.0.5
+  http: ^1.2.2
+  supabase_flutter: ^2.10.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
